# tfc-t0

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
notebooks/: 01_inference_quickstart.ipynb  02_finetune_lora.ipynb  dataset_properties.json  t0-alpha.ipynb
t0/: __init__.py  config.py  data.py  mask.py  quantile.py  scaler.py
t0/evaluation/: __init__.py  predictor.py
t0/model/: __init__.py  model.py  rollout.py
t0/model/layers/: __init__.py  feed_forward.py  group_attention.py  head.py  mlp.py  norm.py  patch_encoder.py  patcher.py  rope.py  time_attention.py  transformer.py
t0/utils/: __init__.py  plots.py  style.py  t0.mplstyle
